fixed project gaps and header alignment

--- a/style.scss
+++ b/style.scss
@@ -101,14 +101,15 @@ body{
   font-family: $base-font;
   font-weight:400;
   color: $textColor;
-  margin-left: 1rem;
+  margin-left: 0.4rem;
+  
 }
 
 .project-container {
   display:flex;
   flex-wrap:wrap;
   justify-content:center;
-  gap: 1.2rem;
+  gap: 1.4rem;
 }
 
 
